Bug 38435 - Missing icons in index designer
Summary: Missing icons in index designer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-06-18 04:53 UTC by Andreas Säger
Modified: 2012-01-02 08:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Säger 2011-06-18 04:53:31 UTC
Open an editable database. Bibliography will do.
Open a table for editing.
Open the index designer (Tools>Index Design)
The 5 picture buttons in the top-left area show the same default picture.

Tested with all icon sets.
OK in LibreOffice 3.3.2
Comment 1 Jean-Baptiste Faure 2011-06-19 04:11:12 UTC
Comparing to LibO 3.3.3 icons set, missing icons seem to be lc036.png to lc040.png in <images archive>/dbaccess/res
These icons are present in the images archives shipped with LibO 3.4.1.rc1 so I think that the problem is somewhere else.

Best regards. JBF
Comment 2 Julien Nabet 2011-11-04 17:27:59 UTC
Still here on Master, future 3.5 (git updated today).
Good catch !
Comment 3 Björn Michaelsen 2011-12-23 12:27:02 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 4 Jean-Baptiste Faure 2011-12-26 00:26:59 UTC
Still there in LO 3.5.0 beta2+ (LibreOffice 3.5.0beta2+ Version ID : 8f03437-7f15fca-1fc8c06-ca8e46d-b96fade)

Best regards. JBF
Comment 5 Andras Timar 2011-12-26 13:38:31 UTC
Fixed in libreoffice-3-5 and in master.
Comment 6 Petr Mladek 2012-01-02 08:45:48 UTC
Approved and pushed for 3.4.5-rc2 as well.