missing icons in Index Design dialog fdo#38435